# Stocksensei

./: .replit  README.md  app.py  data_fetcher.py  main_app.py  package-lock.json  package.json  pyproject.toml  replit.md  sentiment_analyzer.py  utils.py  visualizations.py
backend/: init_db.py  main.py
backend/database/: database.py
backend/models/: models.py
backend/schemas/: schemas.py
backend/services/: alert_service.py  sentiment_service.py  stock_service.py
frontend/: package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AlertPanel.tsx  Dashboard.tsx  StockSelector.tsx
